# News-Research-Crew

./: README.md  app.py  news_digest.md  pyproject.toml
src/news_research_crew/: crew.py  main.py
src/news_research_crew/config/: agents.yaml  tasks.yaml
src/news_research_crew/tools/: custom_tool.py  news_cache.json  news_fetcher.py  news_store.db  news_store.py  simple_cache.py
templates/: index.html  results.html  view_result.html
