[project]
name = "news_research_crew"
version = "0.1.0"
description = "news_research_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.1"
]

[project.scripts]
news_research_crew = "news_research_crew.main:run"
run_crew = "news_research_crew.main:run"
train = "news_research_crew.main:train"
replay = "news_research_crew.main:replay"
test = "news_research_crew.main:test"
run_with_trigger = "news_research_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
