[project]
name = "news_research_crew"
version = "0.1.0"
description = "news_research_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.2.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "flask>=3.0.0",
    "markdown>=3.5.0",
]

[project.scripts]
news_research_crew = "news_research_crew.main:run"
run_crew = "news_research_crew.main:run"
train = "news_research_crew.main:train"
replay = "news_research_crew.main:replay"
test = "news_research_crew.main:test"
run_with_trigger = "news_research_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_research_crew"]

[tool.crewai]
type = "crew"
